[project]
name = "easibot-workspace"
version = "0.1.0"
description = "EASI Bot workspace with application code, infrastructure, and shared utilities"

requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
]

[tool.uv.workspace]
members = ["easibot", "agents_pulumi"]

[tool.uv.sources]
easibot = { workspace = true }

[dependency-groups]
dev = [
    "cookiecutter>=2.6.0",
    "cookiecutter-data-science>=2.3.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "mkdocs-material>=9.6.21",
    "nox>=2025.5.1",
    "pre-commit>=4.3.0",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
