[project]
name = "easibot"
version = "0.1.0"
description = "Enterprise Architecture and Systems Integration chatbot"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2.74",
    "langchain>=0.3.0",
    "langchain-aws>=0.2.0",
    "langchain-community>=0.3.0",
    "boto3>=1.35.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["easibot*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
